[gd_scene load_steps=10 format=3 uid="uid://dctcex0xp2iyg"]

[ext_resource type="Script" uid="uid://bw8ov3o4kubfa" path="res://Scripts/Enemies/Bugs/worm/worm_head.gd" id="1_18ehy"]
[ext_resource type="PackedScene" uid="uid://daypi6b0l1qgi" path="res://Scenes/Components/hit_box.tscn" id="2_8ioht"]
[ext_resource type="PackedScene" uid="uid://ddp37pxyayuyc" path="res://Scenes/Components/hurt_box.tscn" id="3_ah8oc"]
[ext_resource type="PackedScene" uid="uid://bsi1gw5kk2uiy" path="res://Scenes/Components/health_component.tscn" id="4_hbnmn"]
[ext_resource type="Texture2D" uid="uid://bwr5k2ggybrxi" path="res://Assets/Images/SpriteSheets/Animations/enemies/boss_1/alien-boss-1-head.png" id="5_w0sdf"]
[ext_resource type="Script" uid="uid://cfdggjkh5asx8" path="res://Scripts/ComponentScripts/terrain_detection_component.gd" id="6_a5xkk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nmopg"]
radius = 20.0
height = 54.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ub0ku"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_w0sdf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tq1ak"]
radius = 9.0

[node name="WormHead" type="CharacterBody2D" groups=["bosses", "enemies"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_18ehy")
SPEED = 400.0
DAMAGE = 100.0
DEATH_SFX = "WormHeadDeathSFX"
ATTACK_HIT_SFX = "EnemyImpactSFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_nmopg")

[node name="HitBox" parent="." instance=ExtResource("2_8ioht")]
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PackedVector2Array(15, 85, 60, 15, 60, -15, 30, -45, -30, -45, -60, -15, -60, 15, -15, 85)

[node name="HurtBox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_ah8oc")]
collision_layer = 4
collision_mask = 2
health_component = NodePath("../HealthComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtBox"]
polygon = PackedVector2Array(15, 85, 60, 15, 60, -15, 30, -45, -30, -45, -60, -15, -60, 15, -15, 85)

[node name="HealthComponent" parent="." instance=ExtResource("4_hbnmn")]
max_health = 10000.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_ub0ku")
autoplay = "default"

[node name="DamageNumbersOrigin" type="Marker2D" parent="."]

[node name="ConnectionPoint" type="Marker2D" parent="."]
position = Vector2(0, -35)

[node name="TerrainDetectionComponent" type="Area2D" parent="."]
collision_mask = 48
script = ExtResource("6_a5xkk")
terrain_speed_mods = Array[float]([1.0, 1.0, 1.0, 1.0])

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainDetectionComponent"]
shape = SubResource("CircleShape2D_tq1ak")

[connection signal="hitbox_triggered" from="HitBox" to="." method="_on_hit_box_hitbox_triggered"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="hurt" from="HealthComponent" to="." method="_on_health_component_hurt"]
